--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 body {
  text-align: center;
  border: 1px solid black;
-}
-img {
-border-radius: 50%;
-border: 2px solid black;
+ background-image: url(https://drive.google.com/file/d/1_eC8Og_qFAdTfaKFZAuSbeT72ehu-D-e/view);
+ background-repeat: no-repeat;
+ background-attachment: fixed;  
+ background-size: cover;
 }
