--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
  text-align: center;
  border: 1px solid black;
- background-image: url(https://resources.owllabs.com/hs-fs/hubfs/fog-3622519_1920-jpg.jpeg?width=882&name=fog-3622519_1920-jpg.jpeg);
+ background-image: url(https://drive.google.com/file/d/1uAMUOVUnF3cYHa9DN75LR9LuTFJcdj3z/view?usp=drivesdk);
  background-repeat: no-repeat;
  background-attachment: fixed;  
  background-size: cover;
