--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
  text-align: center;
- border: 1px solid black;
- background-image: url(https://drive.google.com/file/d/1_eC8Og_qFAdTfaKFZAuSbeT72ehu-D-e/view?usp=drivesdk);
+ border: 1px solid white;
+ background-colour: lilac;
  background-repeat: no-repeat;
  background-attachment: fixed;  
  background-size: cover;
