--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
  text-align: center;
  border: 1px solid white;
- background-colour: purple;
+ background-colour: #CAA3F7;
  background-repeat: no-repeat;
  background-attachment: fixed;  
  background-size: cover;
