--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
  text-align: center;
  border: 1px solid white;
-background-image: url(Noah.jpg);
+ background-colour: #CAA3F7;
  background-repeat: no-repeat;
  background-attachment: fixed;  
  background-size: cover;
