--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 body {
  text-align: center;
  border: 1px solid white;
- background-colour: #CAA3F7;
+ background-image: url(Noah.jpg);
  background-repeat: no-repeat;
  background-attachment: fixed;  
  background-size: cover;
- font-family: Comic Sans;
+ font-family: Helvetica;
 }
 
 p {
