--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
  background-repeat: no-repeat;
  background-attachment: fixed;  
  background-size: cover;
- font-family: Helvetica;
+ font-family: "Comic Sans MS";
  font-size:21px;
 }
 
