--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,8 @@ body {
 
 .img-wrapper {    
     max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 30px;
     transition: all 400ms ease-in-out;
 }
